--- a/exercise-gen-conf-example.yaml
+++ b/exercise-gen-conf-example.yaml
@@ -5,8 +5,8 @@ models:
       - api1
       - api2
       - api3
-    #model: gemini-exp-1121
-    model: gemini-1.5-flash
+    model: gemini-exp-1206
+    #model: gemini-1.5-flash
     gen_config:
       temperature: 1.1
       top_p: 0.95
@@ -22,9 +22,11 @@ models:
   embeddings:
     model: all-MiniLM-L6-v2
     threshold: 0.65
+    faiss_dir: ./indexes
+    save_every: 1
 
 batch_size: 5
-topic: Economics
+topic: Healt
 difficulty: 4
 max_exercises: 50
 output_info:
